# VNCpp_CMake

./: .gitignore  .travis.yml  README.md  settings.gradle  vncpp_cmake.jks.enc
gradle/wrapper/: gradle-wrapper.properties
slideLibrary/: build.gradle
slideLibrary/src/main/java/com/jeremyfeinstein/slidingmenu/lib/: CustomViewAbove.java  CustomViewBehind.java  SlidingMenu.java
vncpp/: build.gradle
vncpp/src/main/: AndroidManifest.xml
vncpp/src/main/cpp/: CMakeLists.txt
vncpp/src/main/cpp/include/rfb/: keysym.h  rfb.h  rfbclient.h  rfbconfig.h  rfbint.h  rfbproto.h  rfbregion.h
vncpp/src/main/cpp/libvnc/libvncclient/: listen.c
vncpp/src/main/cpp/libvnc/rfb/: rfbclient.h  rfbconfig.h
vncpp/src/main/cpp/src/: CommonType.h  JavaBridge.cpp  ObservableJNI.cpp  ObservableJNI.h
vncpp/src/main/cpp/src/model/: Vnc.cpp  Vnc.h
vncpp/src/main/cpp/src/model/comunication/: ClientConnectionRFB.cpp  ClientConnectionRFB.h  HandlerRFB.cpp  HandlerRFB.h
vncpp/src/main/cpp/src/model/screen/: ClientScreen.cpp  ClientScreen.h
vncpp/src/main/java/es/farfuteam/vncpp/controller/: ActivityTabs.java  CanvasActivity.java  Configuration.java  ConfigurationMenu.java  EditionActivity.java  HelpActivity.java  NewConnectionActivity.java  TabListener.java
vncpp/src/main/java/es/farfuteam/vncpp/model/: ObservableCanvas.java  ObserverCanvas.java  ObserverJNI.java  Screen.java  VncBridgeJNI.java
vncpp/src/main/java/es/farfuteam/vncpp/model/sql/: Connection.java  ConnectionSQLite.java
vncpp/src/main/java/es/farfuteam/vncpp/view/: Adapter.java  CanvasView.java  DialogOptions.java  ListFragmentTab.java  ListFragmentTabFav.java  SlideListFragment.java
vncpp/src/main/res/drawable-mdpi/: background.xml  list_selector.xml  tab_favorites.xml
vncpp/src/main/res/layout/: canvas.xml  checkbox_out.xml  configuration.xml  connection_window.xml  edition.xml  element_user.xml  help.xml  list_users.xml  row_slide.xml  tab_host.xml
vncpp/src/main/res/menu/: context_menu.xml  new_connection.xml
vncpp/src/main/res/values/: about_message.xml  colors.xml  function_keys.xml  help_message.xml  help_strings.xml  special_keys.xml  strings.xml  styles.xml  themes.xml
vncpp/src/main/res/values-es/: about_message.xml  help_message.xml  help_strings.xml  strings.xml
